04_git/aws/01-upstream/01-aws-upstream/01_bootstrap/argo/yaml/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ingress-01-aws-upstream
  namespace: default
spec:
  ingressClassName: external-nginx
  rules:
    - host: 01-aws-upstream-argocd.panwang.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 80
